Microservices-CQRS-SAGA-Kafka/axon-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: axon-server
  name: axon-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: axon-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/microservicescqrssagakafka_axon-demo: "true"
        io.kompose.service: axon-server
    spec:
      containers:
      - image: axoniq/axonserver
        imagePullPolicy: ""
        name: axon-server
        ports:
        - containerPort: 8124
        - containerPort: 8024
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
