Microservices-CQRS-SAGA-Kafka/discovery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery-service
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discovery-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/microservicescqrssagakafka_axon-demo: "true"
        io.kompose.service: discovery-service
    spec:
      containers:
      - image: discovery-service
        imagePullPolicy: ""
        name: discovery-service
        ports:
        - containerPort: 8010
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
