Microservices-CQRS-SAGA-Kafka/discovery-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discovery-service
  name: discovery-service
spec:
  ports:
  - name: "8010"
    port: 8010
    targetPort: 8010
  selector:
    io.kompose.service: discovery-service
status:
  loadBalancer: {}
