Microservices-CQRS-SAGA-Kafka/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: product-service
status:
  loadBalancer: {}
