Microservices-CQRS-SAGA-Kafka/microservicescqrssagakafka_axon-demo-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: microservicescqrssagakafka_axon-demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/microservicescqrssagakafka_axon-demo: "true"
  podSelector:
    matchLabels:
      io.kompose.network/microservicescqrssagakafka_axon-demo: "true"
